cmake_minimum_required(VERSION 3.22)
project(DataStructuresAndAlgorithms)

set(CMAKE_CXX_STANDARD 14)

add_executable(DataStructuresAndAlgorithms main.cpp Exception.cpp Exception.h Array.hpp SingleLinkList.hpp ArrayStack.hpp ArrayStack.hpp CircularQueue.hpp BinaryTree.hpp BinaryHeap.hpp My_Class/SeqList.hpp PriorityQueue.hpp Sort.hpp Utils.hpp CircleLinkList.hpp Node.hpp Calculator.hpp DCLinkList.hpp CharString.hpp FileEditor.hpp)
